Pin wpcs dep to 0.13.1 until we're ready to upgrade to 0.14.0

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "php"
   ],
   "require": {
-    "wp-coding-standards/wpcs": "*"
+    "wp-coding-standards/wpcs": "0.13.1"
   },
   "scripts": {
     "post-install-cmd": [
