--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install:
   - travis_retry curl -s http://getcomposer.org/installer | php
   - travis_retry php composer.phar install --dev --no-interaction
 
-  - apt-get install libxml2-utils
+  - sudo apt-get install libxml2-utils
   - export XMLLINT_INDENT=" "
 
 script:
