--- a/.travis.yml
+++ b/.travis.yml
@@ -38,22 +38,11 @@ install:
   # Disabled for now, see https://github.com/ChromatixAU/phpcs-config-chromatix/issues/6
   #- composer install --prefer-dist --no-interaction
 
-  # Install and set up xmllint.
-  - sudo apt-get install libxml2-utils
-  - export XMLLINT_INDENT=" "
-
 script:
 
-  # Lint the PHP.
+  # Lint the PHP & XML.
   - travis_retry curl --fail --location https://chr-cicd.herokuapp.com/scripts/php-lint.sh | bash
-
-  # Validate XML.
-  # TODO: Change to https://chr-cicd.herokuapp.com/scripts/xml-lint.sh when that is ready.
-  # @see http://xmlsoft.org/xmllint.html
-  - xmllint --noout ./ruleset.xml
-
-  # TODO: Check XML code-style consistency.
-  #- diff -B ./ruleset.xml <(xmllint --format "./ruleset.xml")
+  - travis_retry curl --fail --location https://chr-cicd.herokuapp.com/scripts/xml-lint.sh | bash
 
   # Check code standards on our custom Sniffs.
   # Disabled for now, see https://github.com/ChromatixAU/phpcs-config-chromatix/issues/6
